minor spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 body > div {
-    min-height: 100vh
+    min-height: 100vh;
+}
+
+body > div:not(#title-slide) {
+    padding-left: .75rem;
+    padding-right: .75rem;
 }
 
 #title-slide {
